--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A library for multithreaded JavaScript execution",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "esdoc -c ./esdoc.json"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +13,9 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "esdoc": "^0.4.7",
     "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint-plugin-react": "^4.3.0",    
     "webpack": "^1.12.15"
   }
 }
