--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "buildwatch": "webpack --watch",
     "doc": "esdoc -c ./esdoc.json"
   },
   "author": "",
@@ -15,7 +17,8 @@
     "babel-preset-es2015": "^6.6.0",
     "esdoc": "^0.4.7",
     "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^4.3.0",    
+    "eslint-plugin-react": "^4.3.0",
+    "uglify-loader": "^1.3.0",
     "webpack": "^1.12.15"
   }
 }
