--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "builddeploy": "webpack -p --config webpack.config.production.js",
     "buildwatch": "webpack --watch",
-    "doc": "esdoc -c ./esdoc.json"
+    "doc": "esdoc -c ./esdoc.json",
+    "lint": "eslint \"src\""
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "esdoc": "^0.4.7",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-react": "^4.3.0",
+    "mocha": "^2.4.5",
     "uglify-loader": "^1.3.0",
-    "webpack": "^1.12.15"
-  }
+    "webpack": "^1.13.1"
+  },
+  "dependencies": {}
 }
